Revision history for Catmandu-DBI

{{$NEXT}}

0.0506  2016-06-08 14:51:05 CEST
  - add prefix 'DBI:' to data_source automatically
  - fix memory leak in Catmandu::Store::DBI::Iterator

0.0505  2016-04-20 16:40:09 CEST
  - Add more documentation

0.0504  2016-02-19 12:31:06 CET
  - support field 'datetime'

0.0503  2015-10-13 16:13:54 CEST
  - Fix typo

0.0502  2015-10-13 16:07:07 CEST
  - Fix Pg quoting on index creation

0.0501  2015-10-13 11:26:42 CEST
  - Shallow copy default mapping
  - define VERSION in all packages

0.05  2015-10-08 11:12:04 CEST
  - Column mapping
  - Specialized Iterator
  - Synchronize VERSION's

0.0135 2015-04-14
  - BUG in Catmandu::Store::DBI for MySQL. identifier 'id' is of type
    'varchar', which is case insensitive.  This can easily be solved with the
    sql statement "alter table scans modify id varchar(255) binary".

0.0134 2015-01-26
  - BUG in Catmandu::Store::DBI: method 'dbh' crashes during global destruction
    (after call to DEMOLISH). Fixed by not accessing DBI interface during this fase.

0.0133 2015-01-16
  - BUG in Catmandu::Store::DBI::Bag: a reference to the database handle is
    stored in a variable outside the callback in function _build_create_*, and
    then used inside the callback. This only works as long as the database handle
    is active. When working with web applications, where these stores are kept in
    memory, and not used for a long time, this can lead to inactive database
    handles. Fix: direct reference from the callback to the function "dbh" of the
    Catmandu::Store::DBI, that automatically reconnects if necessary.

0.0132 2015-01-09
  - BUG for DBD::Pg. When inserting data, column 'data' is not properly escaped
    als PG_BYTEA (see _build_add_postgres in Catmandu::Store::DBI::Bag)

0.0131 2015-01-09
  - Incorrect use of 'state' in function Catmandu::Store::DBI::dbh. Due to this
    bug, only one dbh could be stored. Now also the version in
    Catmandu::Store::DBI is raised
